package shay.finalproject.webcraeler.crawlers.interfaces;

public interface Crawler {

    void crawl();

    // void printMap();

    // int visitedPages();
    //
    // int linksMap();


}
